# Synacor

./: .gitignore  .progress.txt.swp  CHANGELOG.md  LICENSE  Synacor.cabal  algo.txt  decompiled.txt  progress.txt  teleport.txt  teleportReaction.txt
app/: Main.hs
src/: Decompiler.hs  Processor.hs
