cabal-version:      3.0
name:               Synacor
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Peter van der Heijden
maintainer:         heijp06@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Processor
    -- other-modules:
    -- other-extensions:
    build-depends:
        array,
        base ^>=4.17.2.1,
        mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable Synacor
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        ansi-terminal,
        base ^>=4.17.2.1,
        bytestring,
        split,
        MissingH,
        Synacor

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite Synacor-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        Synacor
